Adjust now-incorrect animated resize logging after r232544 https://bugs.webkit.org/show_bug.cgi?id=187281 <rdar://problem/41645347>

Reviewed by Simon Fraser.

* UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView _didCommitLayerTree:]):
(-[WKWebView _didCompleteAnimatedResize]):
(-[WKWebView _beginAnimatedResizeWithUpdates:]):
_beginAnimatedResizeWithUpdate: and _didCompleteAnimatedResize are
not strictly paired; we could instead track the SPI, but it's a bit
tricky since resizeWithContentHidden has an implicit endAnimatedResize.
Instead, just log if we still have a resizeAnimationView when we're
committing outside of an animated resize, which seems to be the original concern,
and point toward the possibility of unpaired begin/end.
Also fix logging that has the wrong method name.


Canonical link: https://commits.webkit.org/202534@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@233449 268f45cc-cd09-0410-ab3c-d52691b4dbfc